--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
         <h3>Welcome</h3>
         <div>
           <label for="emailAddress">Email:</label>
-          <input type="email" id="emailAddress" placeholder="Email" />
-          <div id="result" class="text-center"></div>
+          <input type="email" id="emailAddress" placeholder="Email"  class="input2"/>
+          <div id="result" class="result"></div>
         </div>
         <div>
           <label for="enterPassword">Password:</label>
-          <input type="password" id="enterPassword" placeholder="Password" />
-          <div id="result1" class="text-center "></div>
+          <input type="password" id="enterPassword" placeholder="Password" class="input2" />
+          <label for="" class="show">
+            <input type="checkbox" onclick="showPassword()" >  Show Password
+          </label>
+         
+
+          <div id="result1" class="result"></div>
         </div>
         <div class="text-center">
           <button onclick="processResult()" class="btn">Sign In</button>
